Fix the damn scrollbar jumping on and off

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,7 @@ body {
   background: $color-white;
   color: $color-black;
   font-family: $font-1;
+  overflow-y: scroll;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
